--- a/OpenUtau/App.xaml
+++ b/OpenUtau/App.xaml
@@ -4,7 +4,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="UI\Colors\LightTheme.xaml"/>
+                <ResourceDictionary Source="UI\Colors\DarkTheme.xaml"/>
                 <ResourceDictionary Source="UI\Styles\Button.xaml"/>
                 <ResourceDictionary Source="UI\Styles\ScrollBar.xaml"/>
                 <ResourceDictionary Source="UI\Styles\Menu.xaml"/>
