--- a/OpenUtau/UI/Strings.xaml
+++ b/OpenUtau/UI/Strings.xaml
@@ -15,6 +15,7 @@
     <system:String x:Key="menu.file.renderall">Render All...</system:String>
     <system:String x:Key="menu.file.recentfiles">Recent _Files</system:String>
     <system:String x:Key="menu.file.exit">_Exit</system:String>
+    <system:String x:Key="menu.file.export">_Export Audio...</system:String>
 
     <system:String x:Key="menu.edit">_Edit</system:String>
     <system:String x:Key="menu.edit.undo">_Undo</system:String>
