--- a/OpenUtau/UI/Controls/TrackHeader.xaml
+++ b/OpenUtau/UI/Controls/TrackHeader.xaml
@@ -18,9 +18,9 @@
         <Button x:Name="singerNameButton" Style="{StaticResource TrackHeaderSingerButton}" HorizontalAlignment="Stretch" VerticalAlignment="Top"
                 Height="16" Margin="28,4,44,0" HorizontalContentAlignment="Left"
                 Content="{Binding Path=SingerName}" Click="singerNameButton_Click"/>
-        <ToggleButton Style="{StaticResource TrackHeaderSoloToggleButton}" HorizontalAlignment="Right" VerticalAlignment="Top"
+        <ToggleButton x:Name="soloButton"  Style="{StaticResource TrackHeaderSoloToggleButton}" HorizontalAlignment="Right" VerticalAlignment="Top"
                       Height="16" Width="16" Margin="0,4,4,0" Content="S" FontFamily="Arial" FontSize="11"
-                      IsChecked="{Binding Path=Solo}">
+                      IsChecked="{Binding Path=Solo}" Click="soloButton_Click">
             <ToggleButton.ContextMenu>
                 <ContextMenu Foreground="Black" FontSize="12">
                     <MenuItem Header="Solo this only"/>
@@ -28,9 +28,9 @@
                 </ContextMenu>
             </ToggleButton.ContextMenu>
         </ToggleButton>
-        <ToggleButton Style="{StaticResource TrackHeaderMuteToggleButton}" HorizontalAlignment="Right" VerticalAlignment="Top"
+        <ToggleButton x:Name="muteButton"  Style="{StaticResource TrackHeaderMuteToggleButton}" HorizontalAlignment="Right" VerticalAlignment="Top"
                       Height="16" Width="16" Margin="0,4,24,0" Content="M" FontFamily="Arial" FontSize="11"
-                      IsChecked="{Binding Path=Mute}">
+                      IsChecked="{Binding Path=Mute}" Click="MuteButton_Clicked">
             <ToggleButton.ContextMenu>
                 <ContextMenu Foreground="Black" FontSize="12">
                     <MenuItem Header="Mute this only"/>
@@ -44,10 +44,10 @@
                 PreviewMouseDown="faderSlider_PreviewMouseDown" PreviewMouseUp="faderSlider_PreviewMouseUp"
                 PreviewMouseMove="faderSlider_PreviewMouseMove" MouseWheel="faderSlider_MouseWheel" ValueChanged="faderSlider_ValueChanged"/>
         <Slider x:Name="panSlider" Style="{StaticResource TrackHeaderPan}" HorizontalAlignment="Stretch" VerticalAlignment="Top"
-                Height="16" Margin="170,21,54,0" Maximum="90" Minimum="-90"
+                Height="16" Margin="170,21,54,0" Maximum="1" Minimum="-1"
                 Value="{Binding Path=Pan}"
                 PreviewMouseDown="faderSlider_PreviewMouseDown" PreviewMouseUp="faderSlider_PreviewMouseUp"
-                PreviewMouseMove="faderSlider_PreviewMouseMove" MouseWheel="faderSlider_MouseWheel"/>
+                PreviewMouseMove="faderSlider_PreviewMouseMove" MouseWheel="faderSlider_MouseWheel" ValueChanged="PanSlider_ValueChanged_1"/>
         <TextBlock HorizontalAlignment="Right" VerticalAlignment="Top" Height="16" Width="30" Margin="0,22,25,0" TextAlignment="Right" FontSize="10"
                    Text="{Binding ElementName=faderSlider, Path=Value, Converter={StaticResource FaderValueConverter}}"/>
         <TextBlock HorizontalAlignment="Right" VerticalAlignment="Top" Height="16" Width="30" Margin="0,22,4,0" TextAlignment="Right" FontSize="10"
